eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 893689851259.dkr.ecr.ap-southeast-2.amazonaws.com/simplebank:f803958bec47acf9b6c26674266b97399d03cca7
          ports:
            - containerPort: 80
