eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-ingress
spec:
  rules:
    - host: "api.simple-bank.org"
      http:
        paths:
          - pathType: Prefix
            path: "/bar"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 80
